fix(harness): R5e — JSON-carrier flatten arm for collection-literal scalars (h2 1573 -> 1820, exit threshold crossed)
A collection-literal-as-scalar read arrives as an ARRAY-valued cell:
DuckDB's java.sql.Array had a flatten arm; the JSON carrier's byte[]
arrival on H2 did not — the plan outputs type these cells as the
ELEMENT type (VARCHAR), so Executor.unwrap's declared-Array gate can
never fire, and raw byte[] leaked into every value comparison whose
expected side was a literal collection. One decoder now handles both
arrivals (H2Verify.carrierList — hoisted for TestBody's 3500-line cap:
only a JSON-array lexeme parses, anything else stays opaque).

h2 1573 -> 1820 (+247; milestoning family alone 93 -> 161 scoped) —
PAST the 80%-of-DuckDB exit target (1744 of 2180). Gates: core 1594/0,
DuckDB 2180 EXACT + M1 296/0 + zero family drift, PCT green.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01QdsCkXRDVt192HaL1tYvwi